2002-10-05  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Thread/join.java: New Test.

2002-10-05  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Thread/interrupt.java: New Test.
	* gnu/testlet/java/lang/Thread/name.java: New Test.
	* gnu/testlet/java/lang/Thread/daemon.java: New Test.
	* gnu/testlet/java/lang/Thread/priority.java: New Test.
	* gnu/testlet/java/lang/Thread/isAlive.java: New Test.

2002-10-05  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/System/identityHashCode.java: New Test.
	* gnu/testlet/java/lang/Thread/getThreadGroup.java: New test.

2002-09-28  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Double/DoubleTest.java (test_valueOf):
	Tidied up test; message strings etcetera.
	* gnu/testlet/java/lang/Float/FloatTest.java (test_valueOf): ditto

	* gnu/testlet/java/lang/Double/DoubleTest.java (test_parseDouble):
	Added subtests for Double.parseDouble
	* gnu/testlet/java/lang/Float/FloatTest.java (test_parseFloat): ditto
	Added subtests for Float.parseFloat
	
2002-09-28  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Double/DoubleTest.java (test_toString):
	Added comment to subtest #10 about failure on Sun JDKs.
	* gnu/testlet/java/lang/Float/FloatTest.java (test_toString): ditto

2002-09-26  Stephen Crawley <crawley@dstc.edu.au>	
        * gnu/testlet/java/lang/Double/DoubleTest.java (test_shortbyteValue):
	Reverted test for truncation in byteValue() to match JDK 1.4 spec
	and implementation.  [This was incorrectly 'fixed' on 2002-06-13.]
        * gnu/testlet/java/lang/Float/FloatTest.java (test_shortbyteValue):
	ditto

2002-09-25  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java (test):
	Updated to behavior specified in JDK 1.4.1.

2002-09-20  Daryl Lee <dol@sources.redhat.com>
	* Added remaing java.io.BufferedInputStream method tests to
	SimpleRead.java

2002-09-16  Daryl Lee <dol@sources.redhat.com>